tests/baselines/reference/switchBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(2,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(8,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(15,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(21,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(24,18): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(30,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(33,18): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(40,10): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(42,18): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(44,26): error TS2678: Type '"a"' is not comparable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(48,34): error TS2678: Type '"a"' is not comparable to type '""'.


==== tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts (11 errors) ====
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            break;
    }
    
    ONE:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            break ONE;
    }
    
    TWO:
    THREE:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            break THREE;
    }
    
    FOUR:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            FIVE:
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                    break FOUR;
            }
    }
    
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            SIX:
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                    break SIX;
            }
    }
    
    SEVEN:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                    switch ('') {
                        case 'a':
                             ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                            break SEVEN;
                            EIGHT:
                            switch ('') {
                                case 'a':
                                     ~~~
!!! error TS2678: Type '"a"' is not comparable to type '""'.
                                    var fn = function () { }
                                    break EIGHT;
                            }
                    }
            }
    }
    